2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/Makefile.am: Fix the build

2008-06-09  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.c (g_content_type_get_icon): Use icons specified
	in the shared mime database, if available.

	* xdgmime/*: Sync with upstream. This brings support for
	glob weights, generic icons, and changes the cache format to 
	version 1.1.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: don't define G_DISABLE_SINGLE_INCLUDES, it's in
	the global CPPFLAGS now.

	* tests/data-input-stream.c
	* tests/data-output-stream.c
	* tests/g-file-info.c
	* tests/g-file.c
	* tests/live-g-file.c
	* tests/memory-input-stream.c: don't include <glib/gtestutils.h>

2008-05-27  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.0 ===

	* tests/live-g-file.c: Clean up after the tests, so make distcheck
	doesn't complain about leftover files.

2008-05-27  simon.zheng  <simon.zheng@sun.com>

	* glocalfile.c: (g_local_file_query_filesystem_info):
        Fix #533369. Make G_FILE_ATTRIBUTE_FILESYSTEM_TYPE work on Solaris.

2008-05-26  Michael Natterer  <mitch@imendio.com>

	* gmemoryoutputstream.h: declare
	g_memory_output_stream_get_data_size().

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* tests/*: Make tests work 

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols: Add g_memory_output_stream_get_data_size.

2008-05-25  Ross Burton  <ross@burtonini.com>

	* glocalfile.c:
	Fix typo in error message (#534764).

2008-05-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	Fix circular dependency loop for gioenumtypes.h (#534759).

2008-05-19  Hans Breuer  <hans@breuer.org>

	* Makefile.am : EXTRA_DIST += makefile.msc

2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.h:
	* gcontenttype.c: (g_content_type_from_mime_type):
	New function to create a content type from a mime type. (#527175,
	Milan Crha)

2008-05-17  Matthias Clasen  <mclasen@redhat.com>
